Bug 1545499 - Make whether to show focus-rings for all content by default a pref, and disable it on Android. r=NeilDeakin

This pref toggled gives me the desired behavior on Linux, and it should be
trivial to revert to the previous behavior if needed.

Depends on D33393

Differential Revision: https://phabricator.services.mozilla.com/D33394